fix mobile menu icon spacing

--- a/Sass/layout/_header.scss
+++ b/Sass/layout/_header.scss
@@ -82,6 +82,7 @@ header {
     background-color: $menu_background;
     height: 45px;
     padding: 10px;
+    box-shadow: none;
   }
 
   .headerMenu {
