--- a/Sass/layout/_navigation.scss
+++ b/Sass/layout/_navigation.scss
@@ -48,13 +48,13 @@
 
 #nav-icon3 span:nth-child(2),
 #nav-icon3 span:nth-child(3) {
-  top: 15px;
+  top: 18px;
   width: 100%;
   left: 0%;
 }
 
 #nav-icon3 span:nth-child(4) {
-  top: 31px;
+  top: 37px;
   width: 100%;
   left: 0%;
 }
