--- a/Sass/main.css
+++ b/Sass/main.css
@@ -698,6 +698,8 @@ header {
     background-color: #0b0f2bd5;
     height: 45px;
     padding: 10px;
+    -webkit-box-shadow: none;
+            box-shadow: none;
   }
   .headerMenu {
     display: none;
@@ -760,13 +762,13 @@ header {
 
 #nav-icon3 span:nth-child(2),
 #nav-icon3 span:nth-child(3) {
-  top: 15px;
+  top: 18px;
   width: 100%;
   left: 0%;
 }
 
 #nav-icon3 span:nth-child(4) {
-  top: 31px;
+  top: 37px;
   width: 100%;
   left: 0%;
 }
